environment for spotify web api

--- a/sign-in.html
+++ b/sign-in.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A brief description of the page">
     <meta name="author" content="Your Name">
     <title>Page Title</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to an external CSS file -->
+    <link rel="stylesheet" href="welcome.css"> <!-- Link to an external CSS file -->
 </head>
 <body>
     <header>
@@ -39,5 +39,5 @@
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script> <!-- Link to an external JavaScript file -->
+    <script src="login.js"></script> <!-- Link to an external JavaScript file -->
 </body>
